Tests/Lite/Lite/test-run-not.silt
-- RUN-NOT: --verify parse
-- expected-error {{this is a bogus error and should fail}}
